--- a/.gitignore
+++ b/.gitignore
@@ -2,13 +2,15 @@ sonnar/tv/*
 downloads/*
 radarr/movies/*
 nginx/keys/*
+nginx/log/*
 sonnar/data/MediaCover/*
 sonnar/data/logs/*
 radarr/data/MediaCover/*
 radarr/data/logs/*
 qbittorrent/data/qBittorrent/logs/*
-emby/data/logs/*
-emby/data/data/ScheduledTasks/*
-emby/data/data/device/*
-emby/data/data/devices/*
+emby/*
 qbittorrent/data/qBittorrent/BT_backup/*
+radarr/data/log*
+radarr/data/nzb*
+sonnar/data/log*
+sonnar/data/nzb*
