--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -124,6 +124,7 @@ services:
   flaresolverr:
     image: ghcr.io/flaresolverr/flaresolverr:latest
     container_name: flaresolverr
+    restart: unless-stopped
     environment:
       - PUID=1000
       - PGID=1000
