--- a/nginx/nginx/nginx.conf
+++ b/nginx/nginx/nginx.conf
@@ -73,7 +73,7 @@ http {
 	# Virtual Host Configs
 	##
 	include /etc/nginx/conf.d/*.conf;
-	include /config/nginx/site-confs/*;
+	include /config/nginx/site-confs/*.conf;
   
 }
 
