--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,13 @@ sonnar/data/nzb*
 qbittorrent/*
 !radarr/data/nzbdrone.db
 !sonnar/data/nzbdrone.db
+logs.db
+Lidarr.txt
+**/asp/*.xml
+**/.mono/**/*.xml
+*.sample
+*.bak
+*.db-shm
+*.db-wal
+*.zip
+*.pid
