--- a/nginx/nginx/site-confs/default.conf
+++ b/nginx/nginx/site-confs/default.conf
@@ -46,6 +46,15 @@ server {
 		proxy_redirect off;
 		proxy_buffering off;
 	}
+	location /prowlarr {
+		proxy_pass        http://lidarr:9696;
+		proxy_set_header  X-Real-IP  $remote_addr;
+		proxy_set_header        Host            $host;
+		proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
+		proxy_set_header        X-Forwarded-Proto $scheme;
+		proxy_redirect off;
+		proxy_buffering off;
+	}
 	location /tv {
 		proxy_pass        http://sonarr:8989;
 		proxy_set_header  X-Real-IP  $remote_addr;
