--- a/nginx/nginx/site-confs/default.conf
+++ b/nginx/nginx/site-confs/default.conf
@@ -47,7 +47,7 @@ server {
 		proxy_buffering off;
 	}
 	location /prowlarr {
-		proxy_pass        http://lidarr:9696;
+		proxy_pass        http://prowlarr:9696;
 		proxy_set_header  X-Real-IP  $remote_addr;
 		proxy_set_header        Host            $host;
 		proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
